// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should allow to add a class using className prop 1`] = `
<DocumentFragment>
  <button
    class="ml-2 button button--contained button--small button--contained-default"
  >
    Submit
  </button>
</DocumentFragment>
`;

exports[`<Button /> should render correct colors 1`] = `
<DocumentFragment>
  <div>
    <button
      class="button button--contained button--small button--contained-default"
    >
      Submit
    </button>
    <button
      class="button button--contained button--small button--contained-primary"
    >
      Submit
    </button>
    <button
      class="button button--contained button--small button--contained-secondary"
    >
      Submit
    </button>
  </div>
</DocumentFragment>
`;
